# qol-config

./: Cargo.toml  README.md
.github/workflows/: sync.yml
docs/: v1.md
js/: action-metadata.js  config-input.js  config-paths.js  config-renderer.js  display-rules.js  field-label.js  form-model.js  heuristics.js  normalized-config.js  normalized-renderer.js  numeric-control.js  object-array-form.js  object-array-renderer.js  object-map-renderer.js  primitive-fields.js  schema.js  section-renderer.js  string-list-renderer.js  variant-renderer.js
src/: lib.rs  normalized.rs  validation.rs
src/contract/: mod.rs  v1.rs
