[package]
name = "qol-config"
version = "1.2.1"
edition = "2021"
description = "Versioned plugin configuration contract for qol-tools"
license = "PolyForm-Noncommercial-1.0.0"

[dependencies]
dirs = "6.0"
indexmap = { version = "2.12", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
